name:                  icicle
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              icicle
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           icicle.

extra-source-files:
  data/make/main.c
  data/sea/*.h

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-anemone
                     , ambiata-disorder-corpus
                     , ambiata-jetski
                     , ambiata-p
                     , ambiata-piano
                     , ambiata-x-eithert
                     , ambiata-x-file-embed
                     , ambiata-x-show
                     , ambiata-x-vector
                     , ambiata-zebra-core
                     , icicle-core
                     , icicle-data
                     , icicle-source
                     , aeson                           >= 0.8        && < 1.2
                     , annotated-wl-pprint             == 0.7.*
                     , ansi-terminal                   == 0.6.*
                     , bifunctors                      >= 4.2        && < 5.4
                     , bytestring                      == 0.10.*
                     , containers                      == 0.5.*
                     , dates                           == 0.2.*
                     , deepseq                         >= 1.3        && < 1.5
                     , directory                       == 1.2.*
                     , exceptions                      == 0.8.*
                     , file-embed                      == 0.0.9
                     , filepath                        >= 1.3        && < 1.5
                     , hashable                        == 1.2.*
                     , lens                            >= 4.7        && < 4.15
                     , mmorph                          == 1.0.*
                     , old-locale                      == 1.0.*
                     , parallel                        == 3.2.*
                     , pretty-show                     == 1.6.*
                     , resourcet                       >= 1.1        && < 2
                     , scientific                      == 0.3.*
                     , semigroups                      >= 0.16       && < 0.19
                     , template-haskell                >= 2.7        && < 2.12
                     , temporary                       == 1.2.*
                     , text                            == 1.2.*
                     , thyme                           == 0.3.*
                     , time                            >= 1.5        && < 1.7
                     , time-locale-compat              == 0.1.*
                     , transformers                    >= 0.3        && < 0.6
                     , unix                            == 2.7.*
                     , unordered-containers            == 0.2.*
                     , validation                      == 0.5.*
                     , vector                          == 0.11.*
                     , vector-space                    == 0.10.*
                     , void                            >= 0.5        && < 0.8
                     , zenc                            == 0.1.*

                     -- Used for benchmark data generation
                     , QuickCheck                      == 2.8.*

                     -- Well, it might look very odd that we're using both attoparsec
                     -- and parsec.
                     -- The thing is, attoparsec only operates on raw strings, and our source parser
                     -- for Icicle should operate over tokens.
                     -- Going over tokens instead of strings simplifies the parser itself and makes everything
                     -- a bit cleaner.
                     -- As an added benefit, parsec will give us nicer error messages.
                     , attoparsec                      >= 0.12       && < 0.14
                     , megaparsec                      == 5.0.*
                     ,     parsec                      == 3.1.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Paths_icicle
                       Icicle

                       Icicle.Avalanche.Program
                       Icicle.Avalanche.FromCore
                       Icicle.Avalanche.Eval
                       Icicle.Avalanche.Check
                       Icicle.Avalanche.Simp
                       Icicle.Avalanche.Annot
                       Icicle.Avalanche.Statement.Statement
                       Icicle.Avalanche.Statement.Simp
                       Icicle.Avalanche.Statement.Simp.Constructor
                       Icicle.Avalanche.Statement.Simp.Dead
                       Icicle.Avalanche.Statement.Simp.Eval
                       Icicle.Avalanche.Statement.Simp.ExpEnv
                       Icicle.Avalanche.Statement.Simp.Freshen
                       Icicle.Avalanche.Statement.Simp.Melt
                       Icicle.Avalanche.Statement.Simp.ThreshOrd
                       Icicle.Avalanche.Statement.Flatten
                       Icicle.Avalanche.Statement.Flatten.Algorithms
                       Icicle.Avalanche.Statement.Flatten.Base
                       Icicle.Avalanche.Statement.Flatten.Save
                       Icicle.Avalanche.Statement.Flatten.Statement
                       Icicle.Avalanche.Statement.Flatten.Type
                       Icicle.Avalanche.Statement.Flatten.Exp
                       Icicle.Avalanche.Prim.Flat
                       Icicle.Avalanche.Prim.Eval
                       Icicle.Avalanche.Prim.Compounds

                       Icicle.Command

                       Icicle.Benchmark.Generator

                       Icicle.Debug

                       Icicle.Simulator

                       Icicle.Sea.Error
                       Icicle.Sea.FromAvalanche
                       Icicle.Sea.FromAvalanche.Analysis
                       Icicle.Sea.FromAvalanche.Base
                       Icicle.Sea.FromAvalanche.Prim
                       Icicle.Sea.FromAvalanche.Program
                       Icicle.Sea.FromAvalanche.State
                       Icicle.Sea.FromAvalanche.Type
                       Icicle.Sea.Preamble
                       Icicle.Sea.Eval
                       Icicle.Sea.Eval.Base
                       Icicle.Sea.Eval.Program
                       Icicle.Sea.Fleet
                       Icicle.Sea.IO
                       Icicle.Sea.IO.Offset
                       Icicle.Sea.IO.Base
                       Icicle.Sea.IO.Psv
                       Icicle.Sea.IO.Psv.Input
                       Icicle.Sea.IO.Psv.Output
                       Icicle.Sea.IO.Zebra

                       Icicle.Internal.Rename

                       Icicle.Compiler


executable icicle
    main-is:           ../main/icicle.hs

    hs-source-dirs:
                       gen


    build-depends:     base
                     , icicle
                     , icicle-data
                     , icicle-source
                     , icicle-core
                     , ambiata-jetski
                     , ambiata-p
                     , ambiata-x-eithert
                     , ambiata-x-optparse
                     , bytestring                      == 0.10.*
                     , containers                      == 0.5.*
                     , directory                       == 1.2.*
                     , filepath                        >= 1.3        && < 1.5
                     , optparse-applicative            == 0.12.*
                     , mmorph                          == 1.0.*
                     , parallel                        == 3.2.*
                     , parsec                          == 3.1.*
                     , resourcet                       >= 1.1        && < 2
                     , temporary                       == 1.2.*
                     , text                            == 1.2.*
                     , time                            >= 1.5        && < 1.7
                     , transformers                    >= 0.3        && < 0.6
 
    -- The parallel GC prior to GHC 8.0.1 has pathological behaviour for
    -- unbalanced workloads:
    --
    --   https://ghc.haskell.org/trac/ghc/ticket/11783
    --
    -- Even with 8.0.1 there are still issues however, so some tuning can help:
    --
    --   https://ghc.haskell.org/trac/ghc/ticket/9221
    --
    if impl(ghc >= 8.0)
      ghc-options:
                      -Wall -threaded -O2 -funbox-strict-fields -rdynamic -rtsopts "-with-rtsopts=-A128m -n4m"
    else
      ghc-options:
                      -Wall -threaded -O2 -funbox-strict-fields -rdynamic -rtsopts "-with-rtsopts=-A128m -n4m -qg"

executable icicle-make
    ghc-options:       -Wall -threaded -O2 -funbox-strict-fields
    main-is:           main/icicle-make.hs
    build-depends:     base
                     , icicle
                     , icicle-core
                     , icicle-data
                     , icicle-source
                     , ambiata-jetski
                     , ambiata-p
                     , ambiata-x-eithert
                     , bytestring                      == 0.10.*
                     , containers                      == 0.5.*
                     , directory                       == 1.2.*
                     , file-embed                      == 0.0.9
                     , filepath                        >= 1.3        && < 1.5
                     , optparse-generic                == 1.1.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.3        && < 0.6

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2 -funbox-strict-fields

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , icicle-data
                     , icicle-source
                     , icicle-core
                     , icicle
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-disorder-jack
                     , ambiata-p
                     , ambiata-jetski
                     , ambiata-x-eithert
                     , ambiata-x-file-embed
                     , ambiata-x-vector
                     , ambiata-anemone
                     , ambiata-zebra-core
                     , ambiata-zebra-core-test
                     , bifunctors                      >= 4.2        && < 5.4
                     , aeson
                     , bytestring
                     , containers
                     , directory
                     , exceptions                      == 0.8.*
                     , filepath                        == 1.4.*
                     , geniplate-mirror                >= 0.7.2      && < 0.8
                     , megaparsec                      == 5.0.*
                     , parsec
                     , pretty-show                     == 1.6.*
                     , hashable                        == 1.2.*
                     , unordered-containers            == 0.2.*
                     , QuickCheck                      == 2.8.*
                     , quickcheck-instances            == 0.3.*
                     , resourcet                       >= 1.1        && < 2
                     , mmorph                          == 1.0.*
                     , template-haskell                >= 2.4
                     , temporary
                     , text
                     , transformers
                     , unix                            == 2.7.*
                     , vector                          == 0.11.*
                     , semigroups                      >= 0.16       && < 0.19


test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                       base                            >= 3          && < 5
                     , icicle-data
                     , icicle-source
                     , icicle-core
                     , icicle
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , ambiata-x-eithert
                     , containers
                     , hashable                        == 1.2.*
                     , text
                     , QuickCheck                      == 2.8.*
                     , quickcheck-instances            == 0.3.*
                     , template-haskell                >= 2.4
                     , pretty-show                     == 1.6.*
                     , temporary
                     , transformers
                     , filepath


test-suite test-cli
  type:                exitcode-stdio-1.0

  main-is:             test-cli.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core


benchmark bench
  type:                exitcode-stdio-1.0

  main-is:             bench.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       bench

  build-depends:
                       base                            >= 3          && < 5
                     , icicle-data
                     , icicle-source
                     , icicle-core
                     , icicle
                     , ambiata-p
                     , ambiata-x-eithert
                     , containers                      == 0.5.*
                     , criterion                       == 1.1.*
                     , directory                       == 1.2.*
                     , filepath                        == 1.4.*
                     , mmorph                          == 1.0.*
                     , process                         >= 1.2.3      && < 1.5
                     , resourcet                       >= 1.1        && < 2
                     , temporary                       == 1.2.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.3        && < 0.6
