name:                  icicle-core
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              Icicle Core language definition.
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           Icicle Core language definition.

library
  build-depends:
                       base                            >= 3          && < 5
                     , icicle-data
                     , ambiata-disorder-corpus
                     , ambiata-jetski
                     , ambiata-p
                     , ambiata-x-eithert
                     , ambiata-x-show
                     , aeson                           >= 0.8        && < 0.12
                     , annotated-wl-pprint             == 0.7.*
                     , ansi-terminal                   == 0.6.*
                     , bifunctors                      >= 4.2        && < 5.4
                     , bytestring                      == 0.10.*
                     , containers                      == 0.5.*
                     , dates                           == 0.2.*
                     , deepseq                         >= 1.3        && < 1.5
                     , directory                       == 1.2.*
                     , exceptions                      == 0.8.*
                     , file-embed                      == 0.0.9
                     , filepath                        >= 1.3        && < 1.5
                     , hashable                        == 1.2.*
                     , lens                            >= 4.7        && < 4.15
                     , mmorph                          == 1.0.*
                     , old-locale                      == 1.0.*
                     , parallel                        == 3.2.*
                     , pretty-show                     == 1.6.*
                     , scientific                      == 0.3.*
                     , semigroups                      >= 0.16       && < 0.19
                     , temporary                       == 1.2.*
                     , text                            == 1.2.*
                     , thyme                           == 0.3.*
                     , time                            >= 1.5        && < 1.7
                     , time-locale-compat              == 0.1.*
                     , transformers                    >= 0.3        && < 0.6
                     , unix                            == 2.7.*
                     , unordered-containers            == 0.2.*
                     , validation                      == 0.5.*
                     , vector                          == 0.10.*
                     , vector-space                    == 0.10.*
                     , void                            >= 0.5        && < 0.8

                     -- Used for benchmark data generation
                     , QuickCheck                      == 2.8.*

                     -- Well, it might look very odd that we're using both attoparsec
                     -- and parsec.
                     -- The thing is, attoparsec only operates on raw strings, and our source parser
                     -- for Icicle should operate over tokens.
                     -- Going over tokens instead of strings simplifies the parser itself and makes everything
                     -- a bit cleaner.
                     -- As an added benefit, parsec will give us nicer error messages.
                     , attoparsec                      >= 0.12       && < 0.14
                     , megaparsec                      == 5.0.*
                     ,     parsec                      == 3.1.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Icicle.Core

                       Icicle.Core.Stream
                       Icicle.Core.Stream.Stream
                       Icicle.Core.Stream.Error
                       Icicle.Core.Stream.Check

                       Icicle.Core.Program.Program
                       Icicle.Core.Program.Check
                       Icicle.Core.Program.Condense
                       Icicle.Core.Program.Error
                       Icicle.Core.Program.Simp
                       Icicle.Core.Program.Fusion
                       Icicle.Core.Program.Subst

                       Icicle.Core.Exp
                       Icicle.Core.Exp.Exp
                       Icicle.Core.Exp.Prim
                       Icicle.Core.Exp.Combinators
                       Icicle.Core.Exp.Simp

                       Icicle.Core.Eval.Exp
                       Icicle.Core.Eval.Stream
                       Icicle.Core.Eval.Program