name:                  icicle-repl
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              Icicle REPL.
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           Icicle REPL.

executable             icicle-repl
    ghc-options:       -Wall -threaded -O2 -funbox-strict-fields
    hs-source-dirs:    src main
    main-is:           icicle-repl.hs
    build-depends:     base
                     , icicle-data
                     , icicle-core
                     , icicle-source
                     , icicle
                     , ambiata-p
                     , ambiata-x-eithert
                     , ansi-terminal                   == 0.6.*
                     , directory
                     , haskeline                       == 0.7.*
                     , terminal-size
                     , text                            == 1.2.*
                     , transformers                    >= 0.3        && < 0.6
                     ,     parsec                      == 3.1.*

test-suite test-cli
  type:                exitcode-stdio-1.0

  main-is:             test-cli.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core

